fix icon mobile for car

--- a/src/app/modules/choice-mark-car/choice-mark-car.component.scss
+++ b/src/app/modules/choice-mark-car/choice-mark-car.component.scss
@@ -42,7 +42,7 @@
 
       @media (max-width: 720px) {
         margin-right: 0;
-        width: 140px;
+        width: 165px;
       }
 
       &:hover {
